- added # chkconfig to rpm rc file (thanks domfe)
- fixed bug introduced in fixing popserver rfc compliace
- added plugin tutorial to the manual
- fixed bug in aggregator.lua
- fixed bug in mimer (thanks nickshw for bugreporting)
- regularexp lua bindings added
- workaround for the tin TOP. (not fixed, probable bug in stringhack.tophack)
- fixed popserver rfc compliace issue (stat/list/uidl doesn't show messages
marked for deletion) thanks ramik for bugreporting
- fixed bug in browser.lua
- fixed tin.lua issue
28/06/2004 0.0.10 fix release
- added freepops.need_sll() that asserts SSL is present 
(call it after loading browser in the init function of the plugin)
- added browser.ssl_enabled() to check is SSL is available
- fixed bug in engine.c (thanks to ramik)
- added fflush to luay.c (thanks to ramik)
- fixed bug in lycos (thanks to Francesco)
27/06/2004 0.0.9 fix release
- now win32 dist can include SSL enabled curl
- added browser:get_cookie(name) 
- added sanity checks functions to plugins
- common.lua now implements the commonly used uidl* list* dele rset noop
- fixed tin.lua for messages bigger than 1MB
- fixed proxy Host: problem
- added header to each source file
- fixed file descriptor leak in log.c (log_rotate)
22/06/2004 0.0.8 fix release
- now lycos deletes messages from the trash
- doc to kernel.lua
- fixed some lycos issues
20/06/2004 0.0.7 fix release
- fixed gentoo (thanks Er Capoccia)
- added some shortcuts to the win32 installer
- fixed curl_lua
19/06/2004 0.0.6 fix release
- fixed some lycos problems 
- documented lycos.lua in the manual
15/06/2004 0.0.5 feature release
- proxy fixed
- added kernel.org plugin (kernel.lua)
- aggregator.lua now encodes uidl strings
- added mimer module
- fixed bug in base64
- fixed bug in browser
- lycos.it webmail support
- fixed mlex.c bug
- fixed a tin webmail reference to a libero function
07/06/2004 0.0.4 fix/source-reorganization release
- added pkg file for Mac OS X
- documentation for new modules