@@ -4,4 +4,3 @@ next release 0.0.11
 	plugin (superva,freepass,hotmail,yahoo,excite,gmail)
 	problemi in lycos(magari sistemare il mimer decentemente)
 	problemi login tin(aspetta ethereal)
-	fai il supporto per una lista di mail address banned o accettati	
