@@ -98,7 +98,11 @@ Prints the program version.
 .TP
 .I /usr/share/frepops/lua/*
 Webmails access implementation
-.\".TP
+.TP
+.I /etc/freepops/config.lua
+Configuration file, interesting only for paths, addresses to modules binding,
+and accept/reject policy on mail addresses
+\".TP
 .\".I ~/.liberopops/libero.cfg
 .\"Configuration file for the libero webmail user defined (read before than the system wide one) - for normal users
 .\".TP
