@@ -1,3 +1,4 @@
+- added reject/accept policy section in config.lua
 - added # chkconfig to rpm rc file (thanks domfe)
 - fixed bug introduced in fixing popserver rfc compliace
 - added plugin tutorial to the manual
